codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__long_prompt_active_input.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
assertion_line: 116
expression: text
---
┌──────────────────────────────────────┐
│ A lengthy prompt. A lengthy prompt.  │
│ A lengthy prompt. A lengthy prompt.  │
│ A lengthy prompt. A lengthy prompt.  │
│ A lengthy prompt. A lengthy prompt.  │
│ A lengthy prompt. A lengthy prompt.  │
│ visible answer                       │
└──────────────────────────────────────┘
