codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_clipped_prompt.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: buffer_text(&clipped)
---
┌────────────────────────────────────────────────┐
│ Long question Long question Long question      │
└────────────────────────────────────────────────┘
