codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_options_width_boundary.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
assertion_line: 287
expression: "format!(\"Full height:\\n{}\\n\\nClipped:\\n{}\", buffer_text(&buffer),\nbuffer_text(&clipped),)"
---
Full height:
┌──────────────────────┐
│ Second               │
│                      │
│ › 1. abcdefgh        │
│      ijklmno         │
│   2. pqrstuvw        │
│      xyzabcd         │
│   3. Other           │
│                      │
│ enter submit         │
│ ctrl+] skip          │
│ shift+→ main prompt  │
└──────────────────────┘

Clipped:
┌──────────────────────┐
│ Second               │
│ › 1. abcdefgh        │
└──────────────────────┘
